# stfdecomp

./: .gitignore  CMakeLists.txt  Makefile  README.md
rom/: README.md
src/asm/: rng-menu.s  rom_code1.s  rom_code1a.s  rom_code2.s  rom_code3.s  rom_code4.s
src/asm/common/: Makefile
src/asm/common/action/: act_1344C.s  act_13464.s  act_1346C.s  act_134A8.s  act_1560C.s  act_156EC.s  act_159B0.s  act_15A4C.s  act_15C48.s  act_15DFC.s  act_15EE8.s  act_16120.s  act_163A0.s  act_164DC.s  act_16594.s  act_165D4.s  act_168DC.s  act_16A4C.s  act_rc_bwalk.s  act_rc_down.s  act_rc_down_attack.s  act_rc_down_nage_touch.s  act_rc_fumikomi.s  act_rc_guard.s  act_rc_jump.s  act_rc_kabe_nage.s  act_rc_kabehit.s  act_rc_kaeshi.s  act_rc_kawashi.s  act_rc_motion.s  act_rc_nage.s  act_rc_nage_touch.s  act_rc_nagerare.s  act_rc_rise.s  act_rc_run.s  act_rc_syagami.s  act_rc_ta_guard.s  act_rc_ukemi.s  act_rc_walk.s  act_rc_yarare.s  (+3 more)
src/asm/common/camera/: rob_disp.s
src/asm/common/control/: control_init.s
src/asm/common/option/: option.s
src/asm/init/: Makefile
src/asm/init/collision/: collision.s
src/asm/init/copro/: copro_init.s  init.s
src/asm/init/credits/: check.s
src/asm/init/event/: event.s
src/asm/init/fault/: f_handle.s  f_table.s  print_fault.s
src/asm/init/geometry/: geo_init.s
src/asm/kx/: initialize.s  kx.s  kx_init.s  start_ip.s
src/asm/main/: Makefile
src/asm/util/: Makefile
src/c/: hello.c
src/include/: code_globals.S  data_globals.S  globals.S  more_globals.s
src/lib/: rom_code1.ld
tools/: data_extract.py  sfight_data.json
(+78 files in other folders)
